# ChengbookTTS

./: .env.example  .gitignore  MEMORY.md  README.md  pyproject.toml  requirements.txt  项目分析总结.md
chengbook_tts/: README.md  __init__.py
chengbook_tts/cli/: README.md  __init__.py  __main__.py  main.py
chengbook_tts/cli/commands/: model.py  serve.py  synth.py  voice.py
chengbook_tts/client/: README.md  __init__.py  interactive.py  sdk.py
chengbook_tts/config/: README.md  __init__.py  emotions.py  settings.py  voices.py
chengbook_tts/config/model_configs/: README.md  cosyvoice3.yaml  indextts_v1.yaml  indextts_v2.yaml  soulxpodcast.yaml
chengbook_tts/engines/: README.md  __init__.py  base.py  cosyvoice3.py  factory.py  indextts_v1.py  indextts_v2.py  manager.py  soulxpodcast.py  soulxpodcast_humanize.py
chengbook_tts/profiles/: README.md
chengbook_tts/prompts/: README.md  cosyvoice3
chengbook_tts/prompts/custom/: README.md
chengbook_tts/server/: README.md  __init__.py  app.py  audio_utils.py  concurrency.py  console.py  dependencies.py  history.py  models.py
chengbook_tts/server/routes/: README.md  __init__.py  custom_voices.py  history.py  model.py  native.py  openai.py  profile.py
chengbook_tts/tools/: README.md  acc2wav.py
chengbook_tts/utils/: README.md  __init__.py  audio.py  logging.py  text.py
doc/: 启动命令.md  诚太乙接入指南.md
docs/: humanization-design.md  soulxpodcast-性能优化方案.md
memory/: chengbooktts-project-overview.md  chengbooktts-self-contained-migration.md
scripts/: README.md  install_all.bat  install_all.sh  run_server.bat  run_server.sh
tests/: README.md  conftest.py  diagnose_cosyvoice3.py  e2e_audio_diag.py  quick_test.py
tests/test_engines/: README.md  test_base.py  test_cosyvoice3.py
